Additional tweak to hide the overflow of the GMap. Addresses issue #2143

--- a/trunk/themes/greenmapnew/style.css
+++ b/trunk/themes/greenmapnew/style.css
@@ -516,7 +516,7 @@ display: inline;
 }
 
 /* hide GMap overflow */
-#gmap {
+#gmap, #usermap {
   overflow: hidden;
 }
 
